--- a/web_file/index.css
+++ b/web_file/index.css
@@ -184,49 +184,40 @@ hr{
     text-align: center;
     margin-top: 35px;
 }
-.footer_contener{
+/* contect section */
+.contect_contener{
     margin-top: 130px;
     display: flex;
-    justify-content: space-between;
+    gap: 100px;
     background: #FFF8F3;
-    padding: 100px 50px;
+    padding: 100px 150px;
+
 }
-.contect_title{
+.contect_contener .section_title{
+    text-align: left;
+}
+.contect_contener input,textarea{
+    margin-bottom: 24px;
+    border: none;
+    width: 100%;
+    padding: 5px 15px;
+}
+
+.contect_contener p{
+    color: #757575;
+    width: 100%;
     margin-bottom: 30px;
 }
-.contect_dec{
-    color: #757575;
-    padding-right: 100px;
-    font-size: 14px;
-    margin-bottom: 20px;
-}
-.social_icon{
-    margin-top: 10px;
+.icon{
     display: flex;
 }
-a{
-
-    margin-right: 20px;
-    color: #FD6E0A;
+.contect_contener a{
     text-decoration: none;
-    transition: 0.5s;
+    font-size: 20px;
+    color: #FD6E0A;
+    margin-right: 20px;
+    translate: .5s;
 }
-a:hover{
-    font-size: 25px;
-}
-.input_name{
-    padding: 5px 15px;
-    width: 300px;
-    margin-bottom: 10px;
-}
-.input_email{
-    padding: 5px 15px;
-    width: 300px;
-    margin-bottom: 10px;
-}
-.input_message{
-    padding: 5px 15px;
-    width: 300px;
-    height: 300px;
-    margin-bottom: 10px;
+.contect_contener a:hover{
+    font-size: 15px;
 }
