--- a/web_file/index.css
+++ b/web_file/index.css
@@ -11,11 +11,24 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 20px 80px;
+    margin: 0px 80px 20px 80px;
 }
-.navber .logo{
+ .logo{
+    position: relative;
     font-size: 25px;
     font-weight: 700;
+}
+
+.logo::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    background: #FFF8F3;
+    animation: showRight 1s ease forwards;
+    animation-delay: .4s;
 }
 .primary_color{
     color: #FD6E0A;
@@ -220,4 +233,10 @@ hr{
 }
 .contect_contener a:hover{
     font-size: 15px;
+}
+
+@keyframes showRight{
+    100%{
+        width: 0;
+    }
 }
