--- a/web_file/index.css
+++ b/web_file/index.css
@@ -11,7 +11,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0px 80px 20px 80px;
+    margin: 0px 80px 10px 80px;
+    padding-top: 10px;
 }
  .logo{
     position: relative;
